# Open_AI_Personal_Project

./: .gitignore  MainCode.py  README  pyproject.toml  testData.docx  testData.txt  ~$stData.docx
src/Open_AI_Custom_Chatbot/: MainCode.py  Pipfile
src/Open_AI_Custom_Chatbot/data/: BasicScript.py  random_data.csv  random_data.xlsx  testData.docx
